--- a/SSHAARP_package/SSHAARP/NAMESPACE
+++ b/SSHAARP_package/SSHAARP/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(gmt,gmt.system)
 importFrom(gmt,r2gmt)
 importFrom(gtools,mixedsort)
 importFrom(reshape2,melt)
+importFrom(stringr,str_count)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_squish)
 importFrom(utils,capture.output)
