--- a/SSHAARP_package/SSHAARP/NAMESPACE
+++ b/SSHAARP_package/SSHAARP/NAMESPACE
@@ -5,6 +5,7 @@ export(PALM)
 export(countSpaces)
 export(dataSubset)
 export(findMotif)
+export(motifCheck)
 importFrom(BIGDAWG,GetField)
 importFrom(DescTools,RoundTo)
 importFrom(gmt,gmt.system)
