--- a/SSHAARP_package/SSHAARP/NAMESPACE
+++ b/SSHAARP_package/SSHAARP/NAMESPACE
@@ -3,17 +3,19 @@
 export(BLAASD)
 export(PALM)
 export(checkMotif)
-export(countSpaces)
 export(dataSubset)
 export(findMotif)
 importFrom(BIGDAWG,GetField)
 importFrom(DescTools,RoundTo)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,filter)
 importFrom(gmt,gmt.system)
 importFrom(gmt,r2gmt)
 importFrom(gtools,mixedsort)
 importFrom(reshape2,melt)
 importFrom(stringr,str_count)
 importFrom(stringr,str_extract)
+importFrom(stringr,str_split)
 importFrom(stringr,str_squish)
 importFrom(utils,capture.output)
 importFrom(utils,head)
