--- a/SSHAARP_package/SSHAARP/NAMESPACE
+++ b/SSHAARP_package/SSHAARP/NAMESPACE
@@ -7,12 +7,12 @@ export(dataSubset)
 export(findMotif)
 importFrom(BIGDAWG,GetField)
 importFrom(DescTools,RoundTo)
+importFrom(data.table,rbindlist)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
 importFrom(gmt,gmt.system)
 importFrom(gmt,r2gmt)
 importFrom(gtools,mixedsort)
-importFrom(reshape2,melt)
 importFrom(stringr,str_count)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_split)
