--- a/SSHAARP_package/SSHAARP/DESCRIPTION
+++ b/SSHAARP_package/SSHAARP/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: SSHAARP
 Title: Searching Shared HLA Amino Acid Residue Prevalence  
-Version: 0.9.2.9000
+Version: 0.9.3.9000
 Authors@R: 
     person("Livia", "Tran",
     role = c("aut", "cre"),
@@ -10,7 +10,7 @@ Depends: R (>= 2.10)
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
-Imports: data.table, stringr, gtools, BIGDAWG, gmt, DescTools, reshape2, dplyr
+Imports: data.table, stringr, gtools, BIGDAWG, gmt, DescTools, data.table, dplyr
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
 SystemRequirements: GMT
