v 1.0.0 CRAN submission round 3

--- a/SSHAARP_package/SSHAARP/NAMESPACE
+++ b/SSHAARP_package/SSHAARP/NAMESPACE
@@ -8,16 +8,20 @@ export(findMotif)
 importFrom(BIGDAWG,GetField)
 importFrom(DescTools,RoundTo)
 importFrom(data.table,rbindlist)
+importFrom(ddpcr,quiet)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
+importFrom(filesstrings,file.move)
 importFrom(gmt,gmt.system)
 importFrom(gmt,r2gmt)
 importFrom(gtools,mixedsort)
 importFrom(stringr,str_count)
 importFrom(stringr,str_extract)
+importFrom(stringr,str_extract_all)
 importFrom(stringr,str_split)
 importFrom(stringr,str_squish)
 importFrom(utils,capture.output)
 importFrom(utils,head)
 importFrom(utils,read.delim)
+importFrom(utils,sessionInfo)
 importFrom(utils,tail)
