v 2.0.2 -- SEE NEWS FOR DETAILS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(verifyAlleleANHIGHaplo)
 export(verifyAlleleDataset)
 importFrom(BIGDAWG,GetField)
 importFrom(DescTools,RoundTo)
+importFrom(HLAtools,buildAlignments)
 importFrom(data.table,rbindlist)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,.data)
@@ -34,6 +35,7 @@ importFrom(stringr,str_count)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_extract_all)
 importFrom(tools,file_ext)
+importFrom(utils,data)
 importFrom(utils,globalVariables)
 importFrom(utils,read.csv)
 importFrom(utils,read.delim)
