--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: SSHAARP
-Version: 2.0.0
-Date: 2024-09-12
+Version: 2.0.2
+Date: 2024-10-28
 Title: Searching Shared HLA Amino Acid Residue Prevalence
 Authors@R: 
     c(person("Livia", "Tran",
@@ -18,11 +18,11 @@ License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Imports: data.table, stringr, gtools, BIGDAWG, gmt, DescTools, dplyr,
-        sessioninfo, filesstrings, purrr, stringi
+        utils, filesstrings, purrr, stringi, HLAtools
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
 SystemRequirements: GMT (5 or 6), Ghostscript (>=9.6)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
 NeedsCompilation: no
 Packaged: 2020-10-08 20:36:02 UTC; tran.livia
 Author: Livia Tran [aut, cre],
