--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,12 +13,13 @@ export(findMotif)
 export(getVariantInfo)
 export(isNamePresent)
 export(readFilename)
+export(validateVariantType)
 export(verifyAlleleANHIG)
 export(verifyAlleleANHIGHaplo)
 export(verifyAlleleDataset)
-importFrom(BIGDAWG,GetField)
 importFrom(DescTools,RoundTo)
 importFrom(HLAtools,buildAlignments)
+importFrom(HLAtools,getField)
 importFrom(data.table,rbindlist)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,.data)
